make footer and about me section correct on mobile view

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -6,9 +6,9 @@
 }
 
 .about__container {
-  max-width: 100%;
+  width: 100%;
   display: flex;
-  align-items: center; /* Align items vertically */
+  align-items: center;
   margin-left: 104px;
   gap: 56px;
 }
@@ -33,7 +33,6 @@
   line-height: 46px;
   color: black;
   margin-bottom: 5px;
-  width: 100%;
 }
 
 .about__text {
@@ -42,7 +41,6 @@
   font-weight: 400;
   line-height: 24px;
   color: #333;
-  width: 80%;
 }
 
 @media screen and (max-width: 957px) {
@@ -56,16 +54,16 @@
   .about {
     display: flex;
     flex-direction: column; /* Stack items vertically */
-    align-items: center;
+    justify-content: center;
   }
   .about__container {
-    max-width: 768px;
-    margin: 0 auto;
+    width: 100%;
+    margin-left: 40px;
     gap: 32px;
   }
   .about__image {
-    width: 116px;
-    height: 116px;
+    width: 232px;
+    height: 232px;
     border-radius: 1000px;
     object-fit: cover;
     flex-shrink: 0;
@@ -75,7 +73,6 @@
     font-size: 30px;
     line-height: 40px;
     margin-bottom: 5px;
-    width: 424px;
   }
   .about__text {
     font-family: "Roboto", "Inter", sans-serif;
@@ -83,16 +80,29 @@
     font-weight: 400;
     line-height: 24px;
     color: #333;
-    width: 424px;
   }
 }
 
-@media screen and (max-width: ) @media screen and (max-width: 648px) and (min-width: 320px) {
-  .about__container {
-    max-width: 100%;
+@media screen and (max-width: 652px) and (min-width: 320px) {
+  .about {
+    padding: 0 16px 128px;
     display: flex;
     flex-direction: column;
-    margin-left: 104px;
+    justify-content: center;
+  }
+  .about__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     gap: 56px;
+    margin-left: 0;
+  }
+  .about__content {
+    justify-content: center;
+    text-align: center;
+  }
+  .about__image {
+    width: 272px;
+    height: 272px;
   }
 }
