--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,3 +14,7 @@
     padding: 0;
   }
 }
+
+@media screen and (max-width: 652px) and (min-width: 320px) {
+  padding: 0 20px 0;
+}
